tests/snapshots/examples_fixtures/aoc__2025__aoc_day10_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day10_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_part1.flx:47:16
   |
47 |     let left = slice(arr, 0, idx)
   |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_part1.flx:48:17
   |
48 |     let right = slice(arr, idx + 1, len(arr))
   |                 ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part1.flx:57:40
   |
57 |     parse_pattern_bits(inner, idx + 1, push(acc, bit))
   |                                        ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part1.flx:85:50
   |
85 |         parse_buttons_rec(line, close + 1, stop, push(acc, btn))
   |                                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part1.flx:102:23
    |
102 |     zeros(n, idx + 1, push(acc, 0))
    |                       ^^^^

Hint:
  Define it first: let push = ...;


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day10_part1.flx:162:21
    |
162 | let machine_lines = [trim(line) | line <- lines, trim(line) != ""]
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     ---------------------------------------------- parameter 1 has type `Array<String>`

    |                     ---------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.

Found 6 errors.
== stdout ==
<not executed>
